# cookobot-rekognition

./: CMakeLists.txt  README.md  package.xml
OpenCV/: OLD_numberRekognitionColor.py
TensorFlow/: README.md  requirements.txt
TensorFlow/predict/: OLD_number_prediction.py  number_prediction.py
TensorFlow/train/: train_number_prediction.py
TensorFlow/train/number_prediction_model/: saved_model.pb
TensorFlow/train/number_prediction_model/variables/: variables.data-00000-of-00001  variables.index
cookobot-rekognition/: CMakeLists.txt  package.xml
prediction_action/: CMakeLists.txt  package.xml
prediction_action/action/: Prediction.action
prediction_action/launch/: prediction_action.launch
prediction_action/src/: number_prediction.html  number_prediction.py  prediction_server.py
rekognition_action/: CMakeLists.txt  package.xml  test_numberRekognitionColor.py
rekognition_action/action/: Rekognition.action
rekognition_action/launch/: rekognition_action.launch
rekognition_action/src/: action_server.py  capturarImagenObjetoRojo.py  numberRekognitionColor.html  numberRekognitionColor.py
src/: capturarImagen-Basico.py  capturarImagen-ObjetoRojo.py  numberRecognition.py  numberRecognition2.py  numberRekognitionColor.py
